# loguwant

./: README.md  pyproject.toml  setup.cfg  setup.py
src/loguwant/: logger.py
