[metadata]
name = loguwant
version = 0.0.1
author = Yash Goyal
author_email = yashgoyalcs@gmail.com
description = It is a Python package that enables you to log only what you want.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yashgoyal07/loguwant
project_urls =
    Bug Tracker = https://github.com/yashgoyal07/loguwant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src